// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`POST /api/review-events/bulk — wire contract > 2 本立て divergence: rating=3 (前進) + is_correct=false → 統計は false / scheduling は rating 1`] = `
[
  {
    "answeredAt": "2026-05-25T10:01:00.000Z",
    "applied": false,
    "cardId": "44444444-4444-4444-a444-444444444444",
    "createdAt": "2026-05-26T01:00:00.000Z",
    "elapsedMs": null,
    "eventId": "55555555-5555-4555-a555-555555555555",
    "isCorrect": false,
    "rating": 3,
    "selectedAnswerIds": [
      "b",
    ],
    "sessionId": null,
    "userId": "11111111-1111-4111-a111-111111111111",
  },
]
`;

exports[`POST /api/review-events/bulk — wire contract > 2 本立て divergence: rating=3 (前進) + is_correct=false → 統計は false / scheduling は rating 2`] = `
[
  {
    "answered": true,
    "currentStreak": 0,
    "id": "44444444-4444-4444-a444-444444444444",
    "lapses": 0,
    "lastCorrect": false,
    "lastReview": "2026-05-25T10:01:00.000Z",
    "reps": 1,
    "state": 1,
  },
]
`;

exports[`POST /api/review-events/bulk — wire contract > 200 no-op: events=[] は tx を張らず { ok, failed: [] } 1`] = `
{
  "failed": [],
  "ok": true,
}
`;

exports[`POST /api/review-events/bulk — wire contract > 503 + Retry-After: tx throw (transient) → header 値を hard-assert 1`] = `
{
  "error": "bulk_ingest_failed",
}
`;

exports[`POST /api/review-events/bulk — wire contract > clamp: 未来 answered_at は receivedAt に丸め created_at と同一時刻源になる 1`] = `
[
  {
    "answeredAt": "2026-05-26T01:00:00.000Z",
    "applied": false,
    "cardId": "44444444-4444-4444-a444-444444444444",
    "createdAt": "2026-05-26T01:00:00.000Z",
    "elapsedMs": null,
    "eventId": "55555555-5555-4555-a555-555555555555",
    "isCorrect": true,
    "rating": 3,
    "selectedAnswerIds": [
      "a",
    ],
    "sessionId": null,
    "userId": "11111111-1111-4111-a111-111111111111",
  },
]
`;

exports[`POST /api/review-events/bulk — wire contract > dangling (card 不在) → applied=false で保存・failed[] は空・cards UPDATE なし 1`] = `
{
  "failed": [],
  "ok": true,
}
`;

exports[`POST /api/review-events/bulk — wire contract > dangling (card 不在) → applied=false で保存・failed[] は空・cards UPDATE なし 2`] = `
[
  {
    "answeredAt": "2026-05-25T10:01:00.000Z",
    "applied": false,
    "cardId": "44444444-4444-4444-a444-444444444444",
    "createdAt": "2026-05-26T01:00:00.000Z",
    "elapsedMs": null,
    "eventId": "55555555-5555-4555-a555-555555555555",
    "isCorrect": true,
    "rating": 3,
    "selectedAnswerIds": [
      "a",
    ],
    "sessionId": null,
    "userId": "11111111-1111-4111-a111-111111111111",
  },
]
`;

exports[`POST /api/review-events/bulk — wire contract > event_id 衝突 (own-scope 不在 = 他 user の行) → failed[] に載る 1`] = `
{
  "failed": [
    "55555555-5555-4555-a555-555555555555",
  ],
  "ok": true,
}
`;

exports[`POST /api/review-events/bulk — wire contract > golden: { ok, failed } + answer_events INSERT / cards UPDATE / applied / study_days 1`] = `
{
  "failed": [],
  "ok": true,
}
`;

exports[`POST /api/review-events/bulk — wire contract > golden: { ok, failed } + answer_events INSERT / cards UPDATE / applied / study_days 2`] = `
[
  {
    "answeredAt": "2026-05-25T10:01:00.000Z",
    "applied": false,
    "cardId": "44444444-4444-4444-a444-444444444444",
    "createdAt": "2026-05-26T01:00:00.000Z",
    "elapsedMs": null,
    "eventId": "55555555-5555-4555-a555-555555555555",
    "isCorrect": true,
    "rating": 3,
    "selectedAnswerIds": [
      "a",
    ],
    "sessionId": null,
    "userId": "11111111-1111-4111-a111-111111111111",
  },
]
`;

exports[`POST /api/review-events/bulk — wire contract > golden: { ok, failed } + answer_events INSERT / cards UPDATE / applied / study_days 3`] = `
[
  {
    "answered": true,
    "currentStreak": 1,
    "id": "44444444-4444-4444-a444-444444444444",
    "lapses": 0,
    "lastCorrect": true,
    "lastReview": "2026-05-25T10:01:00.000Z",
    "reps": 1,
    "state": 1,
  },
]
`;

exports[`POST /api/review-events/bulk — wire contract > golden: { ok, failed } + answer_events INSERT / cards UPDATE / applied / study_days 4`] = `
{
  "eventIds": [
    "55555555-5555-4555-a555-555555555555",
  ],
  "set": {
    "applied": true,
  },
  "userId": "11111111-1111-4111-a111-111111111111",
}
`;

exports[`POST /api/review-events/bulk — wire contract > golden: { ok, failed } + answer_events INSERT / cards UPDATE / applied / study_days 5`] = `
[
  {
    "day": "2026-05-25",
    "userId": "11111111-1111-4111-a111-111111111111",
  },
]
`;

exports[`POST /api/review-events/bulk — wire contract > option 不一致 (A-2) → 当該 event のみ降格・failed[] は空・他 event は適用 1`] = `
{
  "failed": [],
  "ok": true,
}
`;

exports[`POST /api/review-events/bulk — wire contract > option 不一致 (A-2) → 当該 event のみ降格・failed[] は空・他 event は適用 2`] = `
{
  "eventIds": [
    "66666666-6666-4666-a666-666666666666",
  ],
  "set": {
    "applied": true,
  },
  "userId": "11111111-1111-4111-a111-111111111111",
}
`;
